# hardware

./: .gitignore  Makefile  common.tcl  cosimulate.tcl  hurz.vhd  laber.v  main.cpp  nille.v  simulate.tcl  synthesize.tcl
VivadoTest/: .cproject  .gitignore  .project  .vivado_hls_log_all.xml  BBox.h  CMakeLists.txt  Debug.h  Gonzo.cpp  Gonzo.h  GonzoDictionary  Hardware.cpp  Hardware.h  Interface.cpp  Interface.h  Math.h  Software.cpp  Software.h  TriangleMesh.cpp  TriangleMesh.h  bla.cpp  bla.h  testbench.cpp  vec3.h  vivado_hls.app
VivadoTest/.apc/: autopilot.apfmapping
VivadoTest/gonzosolution/: .gitignore  gonzosolution.aps  script.tcl
VivadoTest/gonzosolution/.autopilot/: .automg_exit  .autopilot_exit
VivadoTest/gonzosolution/.autopilot/db/: a.export.ll  a.g.1.bc  a.g.1.ll  a.g.2.bc  a.g.2.prechk.bc  a.o.1.ll  a.o.1.tmp.bc  a.o.2.bc  a.o.2.ll  a.o.3.bc  a.o.3.ll  a.pp.0.bc  autopilot.rtl.models.txt  bla.bc  bla.pp.0.cpp  bla.pp.0.cpp.ap-cdt.cpp  bla.pp.0.cpp.ap-line.cpp  bla.pp.0.cpp.ap-line.cpp.CXX  bla.pragma.0.cpp  bla.pragma.0.cpp.ap-line.CXX  bla.pragma.2.cpp  global.setting.tcl  gonzomain.adb  gonzomain.adb.xml  gonzomain.bind.adb  gonzomain.compgen.tcl  gonzomain.constraint.tcl  gonzomain.design.xml  gonzomain.rtl_wrap.cfg.tcl  gonzomain.sched.adb  gonzomain.sched.adb.xml  gonzomain.sdaccel.xml  gonzomain.tbgen.tcl  gonzomain.verbose.bind.rpt  gonzomain.verbose.bind.rpt.xml  gonzomain.verbose.rpt  gonzomain.verbose.rpt.xml  gonzomain.verbose.sched.rpt  hls_design_meta.cpp  hls_design_meta.h
VivadoTest/gonzosolution/impl/ip/: auxiliary.xml  vivado.jou  (+2 more)
(+16 files in other folders)
